
using UnityEngine;

public class AnimationParams
{
    public static readonly int SHOOT_LEFT = Animator.StringToHash("ShootLeft");
    public static readonly int SHOOT_RIGHT = Animator.StringToHash("ShootRight");
    public static readonly int SPEED = Animator.StringToHash("Speed");
    public static readonly int IS_SLIDING = Animator.StringToHash("IsSliding");
}
